reduced size of search input on homepage to fix whitespace overflow in ie

--- a/src/app/views/home/home.view.scss
+++ b/src/app/views/home/home.view.scss
@@ -20,7 +20,7 @@
           .row {
             margin: 0;
             .form-control {
-              width: 436px;
+              width: 425px;
             }
           }
           .welcome-text-heading {
